[package]
name = "integrity-scrub"
version = "0.5.10"
authors = [ "Mikael Voss <mvs@nyantec.com>" ]
edition = "2021"
description = "Scrub dm-integrity volumes"
repository = "https://github.com/illdefined/integrity-scrub"
license = "MirOS"
keywords = [ "linux", "utility", "system" ]
categories = [ "command-line-utilities" ]

[dependencies]
bytesize = "1.1"
clap = { version = "3.2", features = [ "derive", "cargo" ] }
ioprio = "0.2"
libc = "0.2"
nix = "0.25"
sensitive = { version = "0.10", default-features = false }

[profile.release]
lto = "thin"
