[package]
name = "integrity-scrub"
version = "0.6.5"
authors = [ "Mikael Voss <mvs@nyantec.com>" ]
edition = "2024"
description = "Scrub dm-integrity volumes"
repository = "https://github.com/illdefined/integrity-scrub"
license = "CC0-1.0"
keywords = [ "linux", "utility", "system" ]
categories = [ "command-line-utilities" ]

[dependencies]
bytesize = "2.0"
clap = { version = "4.5", features = [ "derive", "cargo" ] }
ioprio = "0.2"
libc = "0.2"
nix = { version = "0.30", features = [ "ioctl" ] }
sensitive = { version = "0.10", default-features = false }

[profile.release]
lto = true
